# ITC.DataService

./: .gitattributes  .gitignore  ITC.DataService.sln  compose.yaml  docker-compose-server-cd.yml
Documentation/: README.md  (+9 more)
ITC.AnalyseService/: Dockerfile  pyproject.toml
ITC.AnalyseService/code/artifacts/model/: defect_model.pkl  model_estimator_0.onnx  model_estimator_1.onnx  model_estimator_2.onnx  model_estimator_3.onnx  model_estimator_4.onnx  model_estimator_5.onnx
ITC.AnalyseService/code/py_gpn_kafka/: __init__.py
ITC.AnalyseService/code/py_gpn_kafka/broker/: app.py  consumer.py  producer.py  structure.py
ITC.AnalyseService/code/py_gpn_kafka/broker/exceptions/: __init__.py  retry_error.py
ITC.AnalyseService/code/py_gpn_kafka/broker/handlers/: __init__.py  base_handler.py
ITC.AnalyseService/code/py_gpn_kafka/broker/messages/: __init__.py  message_in.py  message_out.py
ITC.AnalyseService/code/py_gpn_kafka/broker/presenters/: __init__.py  base_presenter.py  response_presenter.py
ITC.AnalyseService/code/py_gpn_kafka/core/: config.py  env_wrapper.py
ITC.AnalyseService/code/py_gpn_kafka/models/deserializers/: __init__.py  task_id.py
ITC.AnalyseService/code/py_gpn_kafka/models/errors/: __init__.py  base_error.py  msg_error.py
ITC.AnalyseService/code/src/: structure.py
ITC.AnalyseService/code/src/common/: config.py
ITC.AnalyseService/code/src/models/: __init__.py  defects.py  input_data.py
ITC.AnalyseService/code/src/preprocessing/: convert_model.py  labeling.py  train.py
ITC.AnalyseService/code/src/processing/: processing.py  structure.py
(+675 files in other folders)
