[tool.poetry]
name = "itc.analyseservice"
version = "0.1.0"
description = ""
authors = ["Khudenkikh Yulia <Khudenkikh.YuD@gazprom-neft.ru>"]
package-mode = false


[tool.poetry.dependencies]
python = ">=3.11 <3.12"
numpy = "1.26.4"
loguru = "0.7.2"
fastapi = "0.111.1"
gssapi = "1.9.0"
alembic = "1.16.4"
uvicorn = "0.35.0"
pydantic = "2.11.7"
pandas = "2.3.1"
joblib = "1.5.1"
scipy = "1.16.1"
aiokafka = "0.12.0"
scikit-learn = "1.7.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']
extend-exclude = '''
(
  notebooks/.*
)
'''

[tool.pycln]
all = true

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
